--- a/Areas/Admin/Views/TongHopSoLieuDKXTs/DkxtkqCcnn_hs_view.cshtml
+++ b/Areas/Admin/Views/TongHopSoLieuDKXTs/DkxtkqCcnn_hs_view.cshtml
@@ -772,7 +772,7 @@
             $('#img_txt_card_hearder').text('Giấy tờ khác');
         }
         if (loaimc == 6) {
-            $('#img_txt_card_hearder').text('Minh chứng nộp lệ phú');
+            $('#img_txt_card_hearder').text('Minh chứng nộp lệ phí');
         }
 
         var lastChar = url.substr(url.length - 4); // => kiểm tra file pdf hoặc img
