--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtHocBa.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtHocBa.cshtml
@@ -165,7 +165,7 @@
                                                         }
                                                         if (item.Dkxt_HB_TrangThai_KinhPhi == 2)
                                                         {
-                                                            <span style="color:blue">Đã KT, Có sai sót</span>
+                                                            <span style="color:blue">Đã kiểm tra, Có sai sót</span>
                                                         }
                                                         if (item.Dkxt_HB_TrangThai_KinhPhi == 3)
                                                         {
