--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtKQTthpt.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtKQTthpt.cshtml
@@ -39,9 +39,7 @@
             @using (Html.BeginForm("DkxtKQTthpt", "DangKyXetTuyens", FormMethod.Get))
             {
                 <div class="row g-1">
-
-
-                    <div class="col-xxl-2 colxl-12">
+                    <div class="col-xxl-2 col-xl-12">
                         @Html.DropDownList("filteriNganh", null, "Ngành...", new { @class = "form-select " })
                     </div>
                     <div class="col-xxl-2 col-xl-12">
