--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtTt.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtTt.cshtml
@@ -152,7 +152,7 @@
                                                 }
                                                 if (item.Dkxt_TrangThai_KinhPhi == 2)
                                                 {
-                                                    <span style="color:blue">Đã kiểm tra, Có sai sót</span>
+                                                    <span style="color:blue">Đã kiểm tra, có sai sót</span>
                                                 }
                                                 if (item.Dkxt_TrangThai_KinhPhi == 3)
                                                 {
@@ -160,7 +160,7 @@
                                                 }
                                                 if (item.Dkxt_TrangThai_KinhPhi == 9)
                                                 {
-                                                    <span>Đã kiểm tra, Đúng</span>
+                                                    <span>Đã kiểm tra, đúng</span>
                                                 }
                                             }
                                         </td>
@@ -172,7 +172,7 @@
                                                 }
                                                 if (item.Dkxt_TrangThai_HoSo == 1)
                                                 {
-                                                    <span style="color: blue">Đã kiểm tra, Có sai sót</span>
+                                                    <span style="color: blue">Đã kiểm tra, có sai sót</span>
                                                 }
                                                 if (item.Dkxt_TrangThai_HoSo == 2)
                                                 {
