--- a/Areas/Admin/Views/TongHopSoLieuDKXTs/TheoDoiNopHoSo.cshtml
+++ b/Areas/Admin/Views/TongHopSoLieuDKXTs/TheoDoiNopHoSo.cshtml
@@ -337,8 +337,11 @@
         if (Ptxt_ID == "4") {
             window.location.href = "/Admin/TongHopSoLieuDKXTs/TheoDoiNopHoSoDetailPt4" + str_query;
         }
-        if (Ptxt_ID == "5" || Ptxt_ID == "6") {
+        if (Ptxt_ID == "5") {
             window.location.href = "/Admin/TongHopSoLieuDKXTs/TheoDoiNopHoSoDetailPt5" + str_query;
+        }
+        if ( Ptxt_ID == "6") {
+            window.location.href = "/Admin/TongHopSoLieuDKXTs/TheoDoiNopHoSoDetailPt6" + str_query;
         }
     }
 </script>
