--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtkqCcnn.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtkqCcnn.cshtml
@@ -129,7 +129,7 @@
                                             }
                                             if (item.Dkxt_TrangThai_KinhPhi == 2)
                                             {
-                                                <span style="color:blue">Đã kiểm tra, Có sai sót</span>
+                                                <span style="color:red">Đã kiểm tra, có sai sót</span>
                                             }
                                             if (item.Dkxt_TrangThai_KinhPhi == 3)
                                             {
@@ -137,7 +137,7 @@
                                             }
                                             if (item.Dkxt_TrangThai_KinhPhi == 9)
                                             {
-                                                <span>Đã kiểm tra, Đúng</span>
+                                                <span>Đã kiểm tra, đúng</span>
                                             }
                                         }
                                     </td>
@@ -149,7 +149,7 @@
                                             }
                                             if (item.Dkxt_TrangThai_HoSo == 1)
                                             {
-                                                <span style="color: blue">Đã kiểm tra, Có sai sót</span>
+                                                <span style="color: red">Đã kiểm tra, có sai sót</span>
                                             }
                                             if (item.Dkxt_TrangThai_HoSo == 2)
                                             {
