--- a/Views/DangKyXetTuyens/dkxthocba.cshtml
+++ b/Views/DangKyXetTuyens/dkxthocba.cshtml
@@ -410,8 +410,8 @@
 
                 <div class="row mt-2 mb-3">
                     <div class="col-12" style="text-align:center">
-                        <input class="btn btn-outline-primary col-lg-1 col-5" id="bt_ok_div_update_aspirations" type="button" value="Đồng ý thêm" />
-                        <input class="btn btn-outline-secondary col-lg-1 col-4" id="bt_close_div_update_aspirations_second" type="button" value="Quay lại" />
+                        <input class="btn btn-outline-primary " id="bt_ok_div_update_aspirations" type="button" value="Đồng ý thêm" />
+                        <input class="btn btn-outline-secondary " id="bt_close_div_update_aspirations_second" type="button" value="Quay lại" />
                     </div>
                 </div>
             </div>
